manifests/django-demo/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: django-demo-postgres
  namespace: django-demo
  labels:
    app.kubernetes.io/name: django-demo-postgres
    app.kubernetes.io/part-of: web
    app.kubernetes.io/component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: django-demo-postgres
      app.kubernetes.io/part-of: web
      app.kubernetes.io/component: database
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-demo-postgres
        app.kubernetes.io/part-of: web
        app.kubernetes.io/component: database
    spec:
      containers:
        - name: postgres
          image: postgres:18.4-trixie
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: django-demo-postgres-data
              mountPath: /var/lib/postgresql
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: django-demo-postgres-data
        labels:
          app.kubernetes.io/name: django-demo-postgres
          app.kubernetes.io/part-of: web
          app.kubernetes.io/component: database-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 20Gi
