manifests/django-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-demo
  namespace: django-demo
  labels:
    app.kubernetes.io/name: django-demo
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: django-demo
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
